--- a/index.html
+++ b/index.html
@@ -94,7 +94,21 @@
           </li>
         </ul>
       </div>
-      <div class="content">Content</div>
+      <div class="content w-full">
+        <!-- Start Head -->
+        <div class="head bg-white p-15 between-flex">
+          <div class="search p-relative">
+            <input class="p-10" type="search" placeholder="Type A Keyword" />
+          </div>
+          <div class="icons d-flex align-center">
+            <span class="notification p-relative">
+              <i class="fa-regular fa-bell fa-lg"></i>
+            </span>
+            <img src="imgs/avatar.png" alt="user face" />
+          </div>
+        </div>
+        <!-- End Head -->
+      </div>
     </div>
   </body>
 </html>
