--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
           </div>
         </div>
         <!-- End Head -->
+        <h1 class="p-relative">Dashboard</h1>
       </div>
     </div>
   </body>
