--- a/index.html
+++ b/index.html
@@ -111,7 +111,20 @@
         <h1 class="p-relative">Dashboard</h1>
         <div class="wrapper d-grid gap-20">
           <div class="welcome bg-white rad-10 txt-c-mobile block-mobile">
-            <h2>Welcome</h2>
+            <div class="intro p-20 d-flex space-between bg-eee">
+              <div>
+                <h2 class="m-0">Welcome</h2>
+                <p class="c-grey mt-5">Billal</p>
+              </div>
+              <img src="imgs/welcome.png" alt="welcome" class="hide-mobile">
+            </div>
+            <img src="imgs/avatar.png" alt="" class="avatar">
+            <div class="body txt-c d-flex p-20 mt-20 mb-20 block-mobile">
+              <div>Billal Benz <span class="d-block c-grey fs-14 mt-10">Developer</span></div>
+              <div>80 <span class="d-block c-grey fs-14 mt-10">Projects</span></div>
+              <div>$850<span class="d-block c-grey fs-14 mt-10">Earned</span></div>
+            </div>
+            <a href="profile.html" class="visit d-block fs-14 rad-6 bg-blue c-white w-fit">Profile</a>
           </div>
         </div>
       </div>
