--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <span class="d-block mt-5 mb-10 fw-bold">$20.000</span>
                 <div class="progress p-relative">
                   <span class="bg-blue blue" style="width: 80%">
-                    <span class="bg-blue">80%</span>
+                    <span class="rad-6 bg-blue">80%</span>
                   </span>
                 </div>
               </div>
@@ -188,7 +188,7 @@
                 <span class="d-block mt-5 mb-10 fw-bold">24</span>
                 <div class="progress p-relative">
                   <span class="bg-orange orange" style="width: 55%">
-                    <span class="bg-orange">55%</span>
+                    <span class="rad-6 bg-orange">55%</span>
                   </span>
                 </div>
               </div>
@@ -202,7 +202,7 @@
                 <span class="d-block mt-5 mb-10 fw-bold">12</span>
                 <div class="progress p-relative">
                   <span class="bg-green green" style="width: 70%">
-                    <span class="bg-green">70%</span>
+                    <span class="bg-green rad-6">70%</span>
                   </span>
                 </div>
               </div>
@@ -241,6 +241,43 @@
             </div>
           </div>
           <!-- End Ticket Widget -->
+          <!-- Start Latest News -->
+          <div class="latest-news p-20 bg-white rad-10 txt-c-mobile">
+            <h2 class="mt-0 mb-20">Latest News</h2>
+            <div class="news-row d-flex align-center mb-20 pb-20">
+              <img class="rad-6 w-100" src="imgs/news-01.png" alt="a picture" />
+              <div class="info">
+                <h3 class="fs-16">Created SASS Section</h3>
+                <p class="m-0 fs-14 c-grey">New SASS Examples & Tutorials</p>
+              </div>
+              <div class="label btn-shape bg-eee fs-13">3 Days Ago</div>
+            </div>
+            <div class="news-row d-flex align-center mb-20 pb-20">
+              <img class="rad-6 w-100" src="imgs/news-02.png" alt="a picture" />
+              <div class="info">
+                <h3 class="fs-16">Changed The Design</h3>
+                <p class="m-0 fs-14 c-grey">A Brand New Website Design</p>
+              </div>
+              <div class="label btn-shape bg-eee fs-13">5 Days Ago</div>
+            </div>
+            <div class="news-row d-flex align-center mb-20 pb-20">
+              <img class="rad-6 w-100" src="imgs/news-03.png" alt="a picture" />
+              <div class="info">
+                <h3 class="fs-16">Team Increased</h3>
+                <p class="m-0 fs-14 c-grey">3 Developers Joined The Team</p>
+              </div>
+              <div class="label btn-shape bg-eee fs-13">7 Days Ago</div>
+            </div>
+            <div class="news-row d-flex align-center">
+              <img class="rad-6 w-100" src="imgs/news-04.png" alt="a picture" />
+              <div class="info">
+                <h3 class="fs-16">Added Payment Gateway</h3>
+                <p class="m-0 fs-14 c-grey">Many New Payment Gateways Added</p>
+              </div>
+              <div class="label btn-shape bg-eee fs-13">9 Days Ago</div>
+            </div>
+          </div>
+          <!-- End Latest News -->
         </div>
       </div>
     </div>
