Dashboard Page - Top Search

--- a/index.html
+++ b/index.html
@@ -318,6 +318,39 @@
             </div>
           </div>
           <!-- End Latest Tasks -->
+          <!-- Start Top Search Items -->
+          <div class="search-items p-20 bg-white rad-10 txt-c-mobile">
+            <h2 class="mt-0 mb-20">Top Search Items</h2>
+            <div class="items-head d-flex space-between c-grey mb-10">
+              <div>Keyword</div>
+              <div>Search Count</div>
+            </div>
+            <div class="items between-flex pt-15 pb-15">
+              <span>Programming</span>
+              <span class="btn-shape bg-eee fs-13">220</span>
+            </div>
+            <div class="items between-flex pt-15 pb-15">
+              <span>Javascript</span>
+              <span class="btn-shape bg-eee fs-13">180</span>
+            </div>
+            <div class="items between-flex pt-15 pb-15">
+              <span>PHP</span>
+              <span class="btn-shape bg-eee fs-13">160</span>
+            </div>
+            <div class="items between-flex pt-15 pb-15">
+              <span>Code</span>
+              <span class="btn-shape bg-eee fs-13">145</span>
+            </div>
+            <div class="items between-flex pt-15 pb-15">
+              <span>Design</span>
+              <span class="btn-shape bg-eee fs-13">110</span>
+            </div>
+            <div class="items between-flex pt-15 pb-15">
+              <span>Logic</span>
+              <span class="btn-shape bg-eee fs-13">95</span>
+            </div>
+          </div>
+          <!-- End Top Search Items -->
         </div>
       </div>
     </div>
