Dashboard Page - Latest Uploads

--- a/index.html
+++ b/index.html
@@ -283,35 +283,39 @@
             <h2 class="mt-0 mb-20">Latest Tasks</h2>
             <div class="task-row between-flex">
               <div class="info">
-                <h3 class="mt-0 mb-5 fs-15 ">Record One New Video</h3>
+                <h3 class="mt-0 mb-5 fs-15">Record One New Video</h3>
                 <p class="m-0 c-grey">Record Python Create Exe Project</p>
               </div>
               <i class="fa-regular fa-trash-can delete"></i>
             </div>
             <div class="task-row between-flex">
               <div class="info">
-                <h3 class="mt-0 mb-5 fs-15 ">Write Article</h3>
-                <p class="m-0 c-grey">Write Low Level vs High Level Languages</p>
+                <h3 class="mt-0 mb-5 fs-15">Write Article</h3>
+                <p class="m-0 c-grey">
+                  Write Low Level vs High Level Languages
+                </p>
               </div>
               <i class="fa-regular fa-trash-can delete"></i>
             </div>
             <div class="task-row between-flex">
               <div class="info">
-                <h3 class="mt-0 mb-5 fs-15 ">Finish Project</h3>
+                <h3 class="mt-0 mb-5 fs-15">Finish Project</h3>
                 <p class="m-0 c-grey">Publish Academy Programming Project</p>
               </div>
               <i class="fa-regular fa-trash-can delete"></i>
             </div>
             <div class="task-row between-flex done">
               <div class="info">
-                <h3 class="mt-0 mb-5 fs-15 ">Attend The Meeting</h3>
-                <p class="m-0 c-grey">Attend The Project Business Analysis Meeting</p>
+                <h3 class="mt-0 mb-5 fs-15">Attend The Meeting</h3>
+                <p class="m-0 c-grey">
+                  Attend The Project Business Analysis Meeting
+                </p>
               </div>
               <i class="fa-regular fa-trash-can delete"></i>
             </div>
             <div class="task-row between-flex">
               <div class="info">
-                <h3 class="mt-0 mb-5 fs-15 ">Finish Lesson</h3>
+                <h3 class="mt-0 mb-5 fs-15">Finish Lesson</h3>
                 <p class="m-0 c-grey">Finish Teaching Flex Box</p>
               </div>
               <i class="fa-regular fa-trash-can delete"></i>
@@ -351,6 +355,73 @@
             </div>
           </div>
           <!-- End Top Search Items -->
+          <!-- Start Latest Uploads -->
+          <div class="latest-uploads p-20 bg-white rad-10 txt-c-mobile">
+            <h2 class="mt-0 mb-20">Latest Uploads</h2>
+            <ul class="m-0">
+              <li class="between-flex pb-10 mb-10">
+                <div class="d-flex align-center">
+                  <img class="mr-10" src="imgs/pdf.svg" alt="img" />
+                  <div>
+                    <span class="d-block">my-file.pdf</span>
+                    <span class="fs-15 c-grey">Elzero</span>
+                  </div>
+                </div>
+                <div class="btn-shape bg-eee fs-13">2.9</div>
+              </li>
+              <li class="between-flex pb-10 mb-10">
+                <div class="d-flex align-center">
+                  <img class="mr-10" src="imgs/avi.svg" alt="img" />
+                  <div>
+                    <span class="d-block">My-Video-File.avi</span>
+                    <span class="fs-15 c-grey">Admin</span>
+                  </div>
+                </div>
+                <div class="btn-shape bg-eee fs-13">1.1</div>
+              </li>
+              <li class="between-flex pb-10 mb-10">
+                <div class="d-flex align-center">
+                  <img class="mr-10" src="imgs/psd.svg" alt="img" />
+                  <div>
+                    <span class="d-block">My-Psd-File.pdf</span>
+                    <span class="fs-15 c-grey">Osama</span>
+                  </div>
+                </div>
+                <div class="btn-shape bg-eee fs-13">7.2</div>
+              </li>
+              <li class="between-flex pb-10 mb-10">
+                <div class="d-flex align-center">
+                  <img class="mr-10" src="imgs/zip.svg" alt="img" />
+                  <div>
+                    <span class="d-block">My-Zip-File.pdf</span>
+                    <span class="fs-15 c-grey">User</span>
+                  </div>
+                </div>
+                <div class="btn-shape bg-eee fs-13">4.6</div>
+              </li>
+              <li class="between-flex pb-10 mb-10">
+                <div class="d-flex align-center">
+                  <img class="mr-10" src="imgs/dll.svg" alt="img" />
+                  <div>
+                    <span class="d-block">My-DLL-File.pdf</span>
+                    <span class="fs-15 c-grey">Admin</span>
+                  </div>
+                </div>
+                <div class="btn-shape bg-eee fs-13">4.9</div>
+              </li>
+              <li class="between-flex pb-10 mb-10">
+                <div class="d-flex align-center">
+                  <img class="mr-10" src="imgs/pdf.svg" alt="img" />
+                  <div>
+                    <span class="d-block">My-Eps-File.pdf</span>
+                    <span class="fs-15 c-grey">Designer</span>
+                  </div>
+                </div>
+                <div class="btn-shape bg-eee fs-13">8.9</div>
+              </li>
+            </ul>
+          </div>
+          <!-- End Latest Uploads -->
         </div>
       </div>
     </div>
