--- a/index.html
+++ b/index.html
@@ -422,6 +422,27 @@
             </ul>
           </div>
           <!-- End Latest Uploads -->
+          <!-- Start Last Project Progress Widget -->
+          <div
+            class="last-project p-20 bg-white rad-10 p-relative txt-c-mobile"
+          >
+            <h2 class="mt-0 mb-20">Last Project Progress</h2>
+            <ul class="m-0 p-relative">
+              <li class="mt-25 d-flex align-center done">Got The Project</li>
+              <li class="mt-25 d-flex align-center done">
+                Started The Project
+              </li>
+              <li class="mt-25 d-flex align-center done">
+                The Project About To Finish
+              </li>
+              <li class="mt-25 d-flex align-center current">Test The Project</li>
+              <li class="mt-25 d-flex align-center">
+                Finish The Project & Get Money
+              </li>
+            </ul>
+            <img class="launch-icon hide-mobile" src="imgs/project.png" alt="img">
+          </div>
+          <!-- End Last Project Progress Widget -->
         </div>
       </div>
     </div>
