Dashboard Page - Latest Post

--- a/index.html
+++ b/index.html
@@ -477,13 +477,42 @@
               <li class="d-flex align-center mt-15">
                 <span class="key bg-red mr-15 d-block rad-half"></span>
                 <div class="pl-15 red">
-                  <p class="fs-14 fw-bold mt-0 mb-5">Finish The Development Workshop</p>
+                  <p class="fs-14 fw-bold mt-0 mb-5">
+                    Finish The Development Workshop
+                  </p>
                   <span class="fs-13 c-grey">20/12/2022 - 12:00am</span>
                 </div>
               </li>
             </ul>
           </div>
           <!-- End Reminders widget -->
+          <!-- Start Latest Post -->
+          <div class="latest-post p-20 bg-white rad-10 txt-c-mobile">
+            <h2 class="mt-0 mb-20">Latest Post</h2>
+            <div class="top d-flex align-center">
+              <img class="avatar mr-15" src="imgs/avatar.png" alt="imgage" />
+              <div class="info">
+                <span class="d-block mb-5">Billal Benz</span>
+                <span class="c-grey fs-14 m-0">About 3 Hours Ago</span>
+              </div>
+            </div>
+            <div class="post-content txt-c-mobile pt-20 pb-20 mt-20 mb-20">
+              You can fool all of the people some of the time, and some of the
+              people all of the time, but you can't fool all of the people all
+              of the time.
+            </div>
+            <div class="post-stats between-flex c-grey">
+              <div class="hearts">
+                <i class="fa-regular fa-heart"></i>
+                <span>1.8k</span>
+              </div>
+              <div class="comments">
+                <i class="fa-regular fa-comment"></i>
+                <span>533</span>
+              </div>
+            </div>
+          </div>
+          <!-- End Latest Post -->
         </div>
       </div>
     </div>
