--- a/index.html
+++ b/index.html
@@ -514,31 +514,155 @@
           </div>
           <!-- End Latest Post -->
           <!-- Start Social Media Stats Widget -->
-          <div class="social-media p-20 bg-white rad-10 p-relative txt-c-mobile">
+          <div
+            class="social-media p-20 bg-white rad-10 p-relative txt-c-mobile"
+          >
             <h2 class="mt-0 mb-20">Social Media Stats</h2>
             <div class="box twitter p-15 p-relative mb-10 between-flex">
-              <i class="fa-brands fa-twitter fa-2x c-white h-full center-flex"></i>
+              <i
+                class="fa-brands fa-twitter fa-2x c-white h-full center-flex"
+              ></i>
               <span>90K Followers</span>
               <a class="fs-13 c-white btn-shape" href="#">Follow</a>
             </div>
             <div class="box facebook p-15 p-relative mb-10 between-flex">
-              <i class="fa-brands fa-facebook fa-2x c-white h-full center-flex"></i>
+              <i
+                class="fa-brands fa-facebook fa-2x c-white h-full center-flex"
+              ></i>
               <span>2M Like</span>
               <a class="fs-13 c-white btn-shape" href="#">Like</a>
             </div>
             <div class="box youtube p-15 p-relative mb-10 between-flex">
-              <i class="fa-brands fa-youtube fa-2x c-white h-full center-flex"></i>
+              <i
+                class="fa-brands fa-youtube fa-2x c-white h-full center-flex"
+              ></i>
               <span>1M Sub</span>
               <a class="fs-13 c-white btn-shape" href="#">Subscribe</a>
             </div>
             <div class="box linkedin p-15 p-relative mb-10 between-flex">
-              <i class="fa-brands fa-linkedin fa-2x c-white h-full center-flex"></i>
+              <i
+                class="fa-brands fa-linkedin fa-2x c-white h-full center-flex"
+              ></i>
               <span>70K Followers</span>
               <a class="fs-13 c-white btn-shape" href="#">Follow</a>
             </div>
           </div>
           <!-- End Social Media Stats Widget -->
         </div>
+        <!-- Start Projects Table -->
+        <div class="projects p-20 bg-white rad-10 m-20">
+          <h2 class="mt-0 mb-20">Projects</h2>
+          <div class="responsive-table">
+            <table class="fs-15 w-full">
+              <thead>
+                <tr class="bg-eee">
+                  <th>Name</th>
+                  <th>Finish Date</th>
+                  <th>Client</th>
+                  <th>Price</th>
+                  <th>Team</th>
+                  <th>Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Ministry Wikipedia</td>
+                  <td>10 May 2022</td>
+                  <td>Ministry</td>
+                  <td>$5300</td>
+                  <td>
+                    <img src="imgs/team-01.png" alt="photo" />
+                    <img src="imgs/team-02.png" alt="photo" />
+                    <img src="imgs/team-03.png" alt="photo" />
+                    <img src="imgs/team-04.png" alt="photo" />
+                  </td>
+                  <td>
+                    <span class="label bg-orange c-white btn-shape"
+                      >Pending</span
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>Elzero Shop</td>
+                  <td>12 Oct 2021</td>
+                  <td>Elzero Company</td>
+                  <td>$1500</td>
+                  <td>
+                    <img src="imgs/team-01.png" alt="photo" />
+                    <img src="imgs/team-02.png" alt="photo" />
+                    <img src="imgs/team-05.png" alt="photo" />
+                  </td>
+                  <td>
+                    <span class="label bg-blue c-white btn-shape"
+                      >In Progress</span
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>Bouba App</td>
+                  <td>05 Sep 2021</td>
+                  <td>Bouba</td>
+                  <td>$800</td>
+                  <td>
+                    <img src="imgs/team-02.png" alt="" />
+                    <img src="imgs/team-03.png" alt="" />
+                  </td>
+                  <td>
+                    <span class="label btn-shape bg-green c-white"
+                      >Completed</span
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>Mahmoud Website</td>
+                  <td>22 May 2021</td>
+                  <td>Mahmoud</td>
+                  <td>$600</td>
+                  <td>
+                    <img src="imgs/team-01.png" alt="" />
+                    <img src="imgs/team-02.png" alt="" />
+                  </td>
+                  <td>
+                    <span class="label btn-shape bg-green c-white"
+                      >Completed</span
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>Sayed Website</td>
+                  <td>24 May 2021</td>
+                  <td>Sayed</td>
+                  <td>$300</td>
+                  <td>
+                    <img src="imgs/team-01.png" alt="" />
+                    <img src="imgs/team-03.png" alt="" />
+                  </td>
+                  <td>
+                    <span class="label btn-shape bg-red c-white">Rejected</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Arena Application</td>
+                  <td>01 Mar 2021</td>
+                  <td>Arena Company</td>
+                  <td>$2600</td>
+                  <td>
+                    <img src="imgs/team-01.png" alt="" />
+                    <img src="imgs/team-02.png" alt="" />
+                    <img src="imgs/team-03.png" alt="" />
+                    <img src="imgs/team-04.png" alt="" />
+                  </td>
+                  <td>
+                    <span class="label btn-shape bg-green c-white"
+                      >Completed</span
+                    >
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <!-- End Projects Table -->
       </div>
     </div>
   </body>
