--- a/settings.html
+++ b/settings.html
@@ -109,11 +109,30 @@
         </div>
         <!-- End Head -->
         <h1 class="p-relative">Settings</h1>
-        <div class="settings-page">
-          <label>
-            <input class="toggle-checkbox" type="checkbox" checked>
-            <div class="toggle-switch"></div>
-          </label>
+        <div class="settings-page m-20 d-grid gap-20">
+          <!-- Start Settings Box -->
+          <div class="p-20 bg-white rad-10">
+            <h2 class="mt-0 mb-10">Site Control</h2>
+            <p class="mt-0 mb-20 fs-15 c-grey">
+              Control The Website If There Is Maintenance
+            </p>
+            <div class="mb-15 between-flex">
+              <div>
+                <span>Website Control</span>
+                <p class="mt-5 mb-0 fs-13 c-grey">
+                  Open/Close Website And Type The Reason
+                </p>
+              </div>
+              <div>
+                <label>
+                  <input class="toggle-checkbox" type="checkbox" checked />
+                  <div class="toggle-switch"></div>
+                </label>
+              </div>
+            </div>
+            <textarea class="close-message b-none p-10 rad-6 d-block w-full" placeholder="Close Message Content"></textarea>
+          </div>
+          <!-- End Settings Box -->
         </div>
       </div>
     </div>
