--- a/settings.html
+++ b/settings.html
@@ -190,7 +190,7 @@
                 <span>Password</span>
                 <p class="c-grey mt-5 mb-0 fs-13">Last Change On 25/10/2021</p>
               </div>
-              <a class="botton btn-shape bg-blue c-white" href="#">Change</a>
+              <a class="button btn-shape bg-blue c-white" href="#">Change</a>
             </div>
             <div class="sec-box mb-15 between-flex">
               <div>
@@ -202,7 +202,7 @@
                 <div class="toggle-switch"></div>
               </label>
             </div>
-            <div class="sec-box mb-15 between-flex">
+            <div class="sec-box between-flex">
               <div>
                 <span>Devices</span>
                 <p class="c-grey mt-5 mb-0 fs-13">
@@ -213,6 +213,28 @@
             </div>
           </div>
           <!-- End Security Info -->
+          <!-- Start Social Info -->
+          <div class="social-boxes p-20 bg-white rad-10">
+            <h2 class="mt-0 mb-10">Social Info</h2>
+            <p class="mt-0 mb-20 c-grey fs-15">Social Media Information</p>
+            <div class="d-flex align-center mb-15">
+              <i class="fa-brands fa-twitter center-flex c-grey"></i>
+              <input class="w-full" type="text" placeholder="Twitter Username">
+            </div>
+            <div class="d-flex align-center mb-15">
+              <i class="fa-brands fa-facebook center-flex c-grey"></i>
+              <input class="w-full" type="text" placeholder="Facebook Username">
+            </div>
+            <div class="d-flex align-center mb-15">
+              <i class="fa-brands fa-linkedin center-flex c-grey"></i>
+              <input class="w-full" type="text" placeholder="Linkedin Username">
+            </div>
+            <div class="d-flex align-center mb-15">
+              <i class="fa-brands fa-youtube center-flex c-grey"></i>
+              <input class="w-full" type="text" placeholder="Youtube Username">
+            </div>
+          </div>
+          <!-- End Social Info -->
         </div>
       </div>
     </div>
