--- a/settings.html
+++ b/settings.html
@@ -235,6 +235,36 @@
             </div>
           </div>
           <!-- End Social Info -->
+          <!-- Start Widget Control -->
+          <div class="widgets-control p-20 bg-white rad-10">
+            <h2 class="mt-0 mb-10">Widgets Control</h2>
+            <p class="mt-0 mb-20 c-grey fs-15">Show/Hide Widgets</p>
+            <div class="control d-flex align-center mb-15">
+              <input id="one" type="checkbox">
+              <label for="one">Quick Draft</label>
+            </div>
+            <div class="control d-flex align-center mb-15">
+              <input id="two" type="checkbox" checked>
+              <label for="two">Yearly Targets</label>
+            </div>
+            <div class="control d-flex align-center mb-15">
+              <input id="three" type="checkbox" checked>
+              <label for="three">Tickets Statistics</label>
+            </div>
+            <div class="control d-flex align-center mb-15">
+              <input id="four" type="checkbox">
+              <label for="four">Latest News</label>
+            </div>
+            <div class="control d-flex align-center mb-15">
+              <input id="five" type="checkbox">
+              <label for="five">Latest Tasks</label>
+            </div>
+            <div class="control d-flex align-center mb-15">
+              <input id="six" type="checkbox" checked>
+              <label for="six">Top Search Items</label>
+            </div>
+          </div>
+          <!-- End Widget Control -->
         </div>
       </div>
     </div>
